4-comments/3-dep.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: comments
spec:
  host: comments
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
  - name: v1
    labels:
      version: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: comments
spec:
  hosts:
    - comments
  http:
  - route:
    - destination:
        host: comments
        subset: v1
---
kind: Service
apiVersion: v1
metadata:
  name: comments
  lables:
    app: comments
spec:
  selector:
    app: comments
  ports:
  - name: http
    port: 80
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments
  labels:
    app: comments
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: comments
        version: v1
    spec:
      containers:
      - name: comments
        image: docker-registry.default.svc:5000/nemo/comments:0.1
        ports:
        - containerPort: 8080
