4-comments/3-vs.yaml

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: comments
spec:
  hosts:
    - comments
  http:
  - route:
    - destination:
        host: comments
        subset: v1
